@@ -6,6 +6,7 @@
 	* Fixed issue #17557: htmlArea RTE: Delete deprecated Page TSConfig properties
 	* Fixed issue #17558: htmlArea RTE: Delete deprecated browser identification js variables
 	* Fixed issue #17559: htmlArea RTE: Delete deprecated code/functions from main js script
+	* Fixed issue #17560: htmlArea RTE: Any plugin must be inside HTMLArea namespace
 
 2011-02-07  Stanislas Rolland  <typo3@sjbr.ca>
 
